# badcoin

./: Cargo.toml  README.md
src/: block.rs  blockchain.rs  kepair.rs  keypair.rs  lib.rs  main.rs  signed_transaction.rs  transaction.rs  wallet.rs
