[package]
name = "badcoin"
version = "0.1.0"
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]
edition = "2018"

[lib]
name = "badcoin"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
serde = "1.0.104"
sha2 = "0.8.1"
byteorder = "1.3.4"
chrono = "0.4.10"
hex = "0.4.0"
secp256k1 = { version = "0.17.2", features = ["rand", "serde"] }